--- a/src/TodoInput.module.scss
+++ b/src/TodoInput.module.scss
@@ -5,15 +5,17 @@
   
   .todoInput input {
     flex: 1;
-    padding: 5px;
-    border: 1px solid #ccc;
+    padding: 0rem 4rem;
+    border: none;
     border-radius: 4px;
+    background-color: #1a1b25;  
+    height: 40px;  
   }
   
   .todoInput button {
     margin-left: 10px;
     padding: 5px 10px;
-    background-color: #4caf50;
+    background-color: #1a1b25;
     color: white;
     border: none;
     border-radius: 4px;
